fixed the footer on the main page to be sticky
*(there is a small issue is if the window is resized too small, the
footer will spill into the content, I am working on a way to handle
that)

--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -31,3 +31,10 @@ h2 img {
     display: inline;
   }
 }
+
+html,body{
+  height: 100%;
+}
+footer, .push{
+  height: 75px;
+}
